- zwei TODOs eingefuegt - overfull hboxen entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1884 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -259,6 +259,8 @@ Im zweiten Teil der Vorlesung werden Grundlagen zu Mannigfaltigkeiten gelehrt.
 Beide Gebiete sind sehr hilfreich für die Funktionalanalysis, die Stochastik,
 die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
 
+\todo{Weitere Einführung formulieren}
+
 \chapter{Topologie}
 
 %def 1.1
@@ -412,7 +414,8 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}[(i)]
-     \item folgt aus Definitionen und \autoref{lem:18}
+     \item folgt aus Definitionen und \autoref{lem:18}\todo{Der Name des
+     Verweises stimmt nicht Lemma != Definition}
      \item folgt aus dem obigen Punkt und der obigen Übungsaufgabe
     \end{enumerate}
   \end{proof}
@@ -535,9 +538,9 @@ und das minimale die triviale Topologie.
     \begin{enumerate}[(1)]
      \item folgt aus Definition
      \item folgt aus Definition
-     \item Die gröbste Topologie, die $S$ enthält, ist gegeben durch:
+     \item Es ist
       $\CT(S)\colon= \bigcap\{\CT\colon\CT\text{ Topologie, die $S$
-      enthält}\}$. Sie ist nach dem ersten Punkt eine Topologie und wegen (2)
+      enthält}\}$ die gröbste Topologie, die $S$ enthält. Sie ist nach dem ersten Punkt eine Topologie und wegen (2)
       die gröbste. Außerdem ist sie  wegen $\CT= 2^{X}$ nicht leer.
     \end{enumerate}
   \end{proof}
@@ -589,8 +592,8 @@ zur nächsten:
   Sei $B$ ein System von Teilmengen von $X$.
   \begin{enumerate}[(1)]
    \item $\forall x\in X\,\exists B_{X}\in B$ mit $X\in B_{X}$.
-   \item $B_{1}, B_{2}\in B, x\in B, x\in B_{1}\cap B_{2}\Rightarrow \exists
-    B_{X}\in B$ mit $x\in B_{X}$ und $B_{X}\subseteq B_{1}\cap B_{2}$. Dann
+   \item Seien $B_{1}, B_{2}\in B$ und $x\in B$ sowie $x\in B_{1}\cap B_{2}$.
+   Damit existiert ein  $B_{X}\in B$ mit $x\in B_{X}$ und $B_{X}\subseteq B_{1}\cap B_{2}$. Dann
     ist $B$ Basis einer Topologie mit $\CT(B)\colon=\{\emptyset\}\cup
     \{\text{System aller Vereinigungen von Mengen aus $B$}\}$.
   \end{enumerate}
@@ -905,7 +908,7 @@ Dies ist eine Verallgemeinerung des Stetigkeitsbegriffes für metrische Räume.
 
 \paragraph{Produkttopologien mit Projektionen}
 
-Seien $(X_{1}, \CT_{1}), (X_{2}, \CT_{2})$ topologische Räume. Wir betrachten
+Seien $(X_{1}, \CT_{1}), (X_{2}, \CT_{2})$ zwei topologische Räume. Wir betrachten
 das System von Teilmengen $B\colon=\{G_{1}\times G_{2}\colon G_{1}\in\CT_{1},
 G_{2}\in\CT_{2}\}$ in $X_{1}\times X_{2}$. Dieses System ist
 durchschnittsabgeschlossen. Wegen \autoref{lem:23} ist es damit Basis der
@@ -1032,7 +1035,7 @@ auszuschließen, führt man zusätzlich folgende Axiome ein:
       ist äquivalent zu: $\exists U_{y}$ mit $x\notin U_{y}$. Dies entspricht
       der Aussage in $T_{1}$.
      \item Wir betrachten zuerst die Richtung $\Rightarrow$: Sei $y\neq
-      x\Rightarrow\exists U_{x}, U_{y}\in\CT$ mit $U_{x}\cap
+      x$. Dann existiert ein $U_{x}$ mit $U_{y}\in\CT$ mit $U_{x}\cap
       U_{y}=\emptyset\Rightarrow U_{x}\subset(U_{y})^{c}\Rightarrow
       \overline{U_{x}}\subset\overline{(U_{y})^{c}} =(U_{y})^{c}\Rightarrow
       y\notin\overline{U_{x}}\Rightarrow
@@ -1040,7 +1043,7 @@ auszuschließen, führt man zusätzlich folgende Axiome ein:
       x\}\Rightarrow \{x\}=\bigcap\{\overline{U_{x}}\colon U_{x}\text{
       Umgebung von }x\}$.
 
-      Die andere Richtung $\Leftarrow$ ergibt sich wie folgt: $y\neq
+      Die andere Richtung $\Leftarrow$ ergibt sich aus: $y\neq
       x\Rightarrow y\notin\bigcap\{\overline{U_{x}}\colon U_{x}\text{ Umgebung
       von } x\}\Rightarrow \exists U_{x}$ mit
       $y\notin\overline{U_{x}}\Rightarrow
@@ -1149,7 +1152,7 @@ Im $\R^{n}$ sind die Aussagen äquivalent:
 
 \begin{bemerk}
   Für die Verallgemeinerung auf topologische Räume hat sich die
-  Eigenschaft~(iii) (\textsc{Heine}"~\textsc{Borel}"~Eigenschaft) als günstig
+  Eigenschaft~(iii) als günstig
   erwiesen.
 \end{bemerk}
 
