Änderungswünsche und Fehlerkorrekturen von Herrn Linde
git-svn-id: https://svn.lug-jena.de/uni-skripte@1885 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -299,7 +299,8 @@ bestimmtes Wahrscheinlichkeitsmaß $\WKM \colon\BorelM(\R)\mapsto [0,1]$ mit
 für alle reelle Zahlen $\alpha<\beta$. Das so erzeugte Wahrscheinlichkeitsmaß
 $\WKM$ heißt \highl{stetig} und $p$ nennt man die \highl{Dichte} von $\WKM$.
 Stetige Wahrscheinlichkeitsmaße beschreiben Vorgänge, bei denen überabzählbar
-viele reelle Zahlen als Ergebnis auftreten können (z.\,B. Lebenszeiten etc.).
+viele reelle Zahlen als Ergebnis auftreten können (z.\,B. Lebenszeiten,
+Messwerte etc.).
 
 \subsection{Die wichtigsten diskreten Wahrscheinlichkeitsverteilungen}
 
@@ -812,7 +813,8 @@ Koordinatenabbildungen.
   Die Randverteilungen berechnen sich aus der gemeinsamen Verteilung durch
   \begin{gather*}
     \WKM_{X_j}(B)
-       = \WKM_{\vec X}(\R\times\dotsb\times \underbrace{B}_j
+       = \WKM_{\vec X}(\R\times\dotsb\times
+       \underset{\rule{0pt}{2ex}\mathrlap{\uparrow~j\text{\upshape-te~Stelle}}}{B}
        \times\dotsb\times\R)\;,\quad B\in\BorelM(\R)\;.
   \end{gather*}
   Damit bestimmt die gemeinsame Verteilung die zugehörigen Randverteilungen.
@@ -1089,7 +1091,7 @@ und man definiert den \highl{Erwartungswert} von $X$ durch
   \begin{tabular}{@{}c@{\qquad}l@{}}
     \toprule
     \textbf{Verteilung von} $\mathbf{X}$
-       & \multicolumn{1}{c@{}}{\textbf{Varianz von} $\mathbf{X}$}\\
+       & \multicolumn{1}{c@{}}{\textbf{Erwartungswert von} $\mathbf{X}$}\\
     \midrule
     $X$ gleichverteilt auf $x_1,\dotsc,x_N$
        & $\E X=\frac{1}{N}\sum_{i=1}^N x_i$\\
