Laut Joerg soll lettergroup aktiviert sein
git-svn-id: https://svn.lug-jena.de/uni-skripte@1888 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -145,7 +145,7 @@
 }
 
 % Befehl für die Darstellung der Gliederungsüberschriften im Index
-% \newcommand*{\lettergroup}[1]{\minisec{#1}}
+\newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 % Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
 % \newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
