Das Aussehen der Tabellen ändern
Durch die Formeln sehen die Zeilen, vor allem in der rechten Spalte so
eng aus. Daher sollt der Abstand auf das 1,1‐ bzw. 1,2‐fache vergrößert
werden.

Außerdem finde ich die linke Spalte mit linksbündiger Ausrichtung besser
lesbar als mit der zentrierten Ausrichtung.

In den Spaltenköpfen zu erwähnen, dass sich die Angabe auf X bezieht ist
nicht notwendig, da das auch nochmal in den Zellen steht. Aus den Zellen
kann man es aber nicht rausnehmen, weil es dort Teil einer Formel ist.
Also oben weg.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1889 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -1088,10 +1088,11 @@ und man definiert den \highl{Erwartungswert} von $X$ durch
 \medskip
 
 \begin{center}
-  \begin{tabular}{@{}c@{\qquad}l@{}}
+  \renewcommand*{\arraystretch}{1.1}
+  \begin{tabular}{@{}l@{\qquad}l@{}}
     \toprule
-    \textbf{Verteilung von} $\mathbf{X}$
-       & \multicolumn{1}{c@{}}{\textbf{Erwartungswert von} $\mathbf{X}$}\\
+    \multicolumn{1}{@{}c@{\qquad}}{\textbf{Verteilung}}
+       & \multicolumn{1}{@{\qquad}c@{\qquad}}{\textbf{Erwartungswert}}\\
     \midrule
     $X$ gleichverteilt auf $x_1,\dotsc,x_N$
        & $\E X=\frac{1}{N}\sum_{i=1}^N x_i$\\
@@ -1223,10 +1224,11 @@ um $\E X$ schwanken.
 \medskip
 
 \begin{center}
-  \begin{tabular}{@{}c@{\qquad}l@{}}
+  \renewcommand*{\arraystretch}{1.2}
+  \begin{tabular}{@{}l@{\qquad}l@{}}
     \toprule
-    \textbf{Verteilung von} $\mathbf{X}$
-       & \multicolumn{1}{c@{}}{\textbf{Varianz von} $\mathbf{X}$}\\
+    \multicolumn{1}{@{}c@{\qquad}}{\textbf{Verteilung}}
+       & \multicolumn{1}{@{\qquad}c@{\qquad}}{\textbf{Varianz}}\\
     \midrule
     $X$ gleichverteilt auf $x_1,\dotsc,x_N$
        & $\V X=\frac{1}{N}\sum_{i=1}^N (x_i-\E X)^2$\\
